# resparser

resparser/: README.md  pyproject.toml
resparser/src/resparser/com/data/: resume.docx  resume_data.py
resparser/src/resparser/com/extractor/: email_extractor.py  field_extractor.py  name_extractor.py  resume_extractor_coordinate.py  skills_extractor.py
resparser/src/resparser/com/llm/: gemini_provider.py  llm_provider.py  openai_provider.py
resparser/src/resparser/com/orchestration/: resume_orchestration.py
resparser/src/resparser/com/parser/: file_parser.py  pdf_parser.py  word_parser.py
resparser/tests/: conftest.py
resparser/tests/integration/: sample_data.py  test_gemini_parser.py  test_openai_parser.py  test_pdf_real_data.py  test_word_real_data.py
resparser/tests/unit/: fake.py  mocks.py  test_email_extractor.py  test_framework.py  test_name_extractor.py  test_resume_extractor.py  test_resume_extractor_edge_cases.py  test_resume_orchestration_parser_selection.py  test_skills_extractor.py  test_skills_extractor_more.py
